--- a/style/styles.css
+++ b/style/styles.css
@@ -41,14 +41,14 @@ hr {
 
 /* CSS code for the logo */
 .logo {
-  font-family: Arial, sans-serif;
+  font-family: Bradley Hand;
   font-size: 24px;
   font-weight: bold;
   color: #333;
 }
 
 .logo::before {
-  content: 'A';
+  content: 'AJ';
   display: inline-block;
   width: 30px;
   height: 30px;
@@ -59,14 +59,3 @@ hr {
   margin-right: 5px;
 }
 
-.logo::after {
-  content: 'J';
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  background-color: #00f;
-  color: #fff;
-  text-align: center;
-  line-height: 30px;
-  margin-left: 5px;
-}
